@@ -1,14 +1,11 @@
-package org.example.dto;
+package com.proz.pokeapi.dto;
 
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
-
 import java.util.List;
-
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 @JsonIgnoreProperties(ignoreUnknown = true)
 public class Pokemon {
-
     private String name;
 
     @JsonProperty("types")
@@ -20,7 +17,7 @@ public class Pokemon {
 
     public String getType() {
         if (types != null && !types.isEmpty()) {
-            return types.getFirst().getType().getName();
+            return types.get(0).getType().getName();
         }
         return null;
     }
